[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/HARVEST_.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.5
margin_top = -189.0
margin_right = 179.5
margin_bottom = 189.0
custom_constants/separation = 20
__meta__ = {
"_edit_group_": true
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 359.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 2 )
text = "Re: Member"

[node name="ButtonStart" type="Button" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 359.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="ButtonOptions" type="Button" parent="VBoxContainer"]
margin_top = 176.0
margin_right = 359.0
margin_bottom = 230.0
custom_fonts/font = SubResource( 1 )
text = "Options"

[node name="ButtonCredits" type="Button" parent="VBoxContainer"]
margin_top = 250.0
margin_right = 359.0
margin_bottom = 304.0
custom_fonts/font = SubResource( 1 )
text = "Credits"

[node name="ButtonExit" type="Button" parent="VBoxContainer"]
margin_top = 324.0
margin_right = 359.0
margin_bottom = 378.0
custom_fonts/font = SubResource( 1 )
text = "Exit"

[connection signal="pressed" from="VBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonOptions" to="." method="_on_ButtonOptions_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonCredits" to="." method="_on_ButtonCredits_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
